[gd_scene load_steps=4 format=3 uid="uid://f20vlvuocltm"]

[ext_resource type="Script" path="res://Gun.gd" id="1_6lmrd"]
[ext_resource type="Texture2D" uid="uid://cswb5do8rrj7q" path="res://pistol/pistol.png" id="1_xgf7a"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qp1ah"]
radius = 515.001

[node name="Gun" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_6lmrd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_qp1ah")

[node name="WeaponPivot" type="Marker2D" parent="."]

[node name="Pistol" type="Sprite2D" parent="WeaponPivot"]
position = Vector2(106, -13)
texture = ExtResource("1_xgf7a")

[node name="ShootingPoint" type="Marker2D" parent="WeaponPivot/Pistol"]
unique_name_in_owner = true
position = Vector2(26, -11)

[node name="AttackSpeed" type="Timer" parent="."]
editor_description = "AttackSpeed"

[connection signal="timeout" from="AttackSpeed" to="." method="_on_timer_timeout"]
